fix(cors): allow all origin patterns dynamically for vercel deployments